# MarioAI

./: LICENSE  env.py  model.py  process.py  test.py  train.py
docker/: Dockerfile  build.sh  launch.sh  pyproject.toml
docker/scripts/: poetry_install.sh
trained_models/: ppo_super_mario_bros_1_2
