[tool.poetry]
name = "poetry-mario"
version = "0.1.0"
description = "mario environments"
authors = ["Kosuke Harada <kosuke.harada@olympus.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gym-super-mario-bros = "=7.3.2"
gym = "=0.17.3"
matplotlib = "^3.6.0"
numpy = "^1.21.4"
opencv-python = "^4.6.0"
pandas = "^1.5.1"
Pillow = "^8.4.0"
#ray = "^1.8.0"
requests = "^2.22.0"
torch = {url = "https://download.pytorch.org/whl/cu117/torch-1.13.0%2Bcu117-cp310-cp310-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu117/torchvision-0.14.0%2Bcu117-cp310-cp310-linux_x86_64.whl"}
#torch = {url = "https://download.pytorch.org/whl/cu101/torch-1.5.1%2Bcu101-cp310-cp310-linux_x86_64.whl"}
#torchvision = {url = "https://download.pytorch.org/whl/cu101/torchvision-0.6.1%2Bcu101-cp310-cp310-linux_x86_64.whl"}
#torch = {version = "=1.13.0+cu117", source = "pytorch-cu117"}
#torchvision = {version = "=1.14.0+cu117", source = "pytorch-cu117"}
tqdm = "^4.63.1"
wandb = "*"
IPython = "*"
pyvirtualdisplay = "*"

#[[tool.poetry.source]]
#name = "pytorch-cu117"
#url = "https://download.pytorch.org/whl/cu117"
#secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
